--- a/WordCounter/WordCounter.csproj
+++ b/WordCounter/WordCounter.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>True</UseWindowsForms>
+    <ApplicationIcon>icons8-indefinite-article-stickers-70.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="icons8-indefinite-article-stickers-70.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WordCounter.Lib\WordCounter.Lib.csproj" />
