Updated .Net version, added sealed keywords

--- a/WordCounter/WordCounter.csproj
+++ b/WordCounter/WordCounter.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>icons8-indefinite-article-stickers-70.ico</ApplicationIcon>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
