--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/.idea/.idea.WordCounter/.idea/sonarlint/issuestore
+/.idea/.idea.WordCounter/.idea
